Prevent short title wrapping up a line

--- a/version_control/Codurance_September2020/css/event-slider.css
+++ b/version_control/Codurance_September2020/css/event-slider.css
@@ -162,6 +162,8 @@
 .calendar-event-item__title {
   font-size: 1.2rem;
   font-weight: 700;
+  display: block;
+  width: 100%;
 }
 
 .calendar-event-item__description {
